force-app/main/default/objects/clofor_com_cfs__Interview__c/clofor_com_cfs__Interview__c.object-meta.xml
<CustomObject>
    <label>Interview</label>
    <nameField>
        <label>Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>