force-app/main/default/objects/clofor_com_cfs__Interview__c/fields/clofor_com_cfs__Comment_from_HR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Comment_from_HR__c</fullName>
    <label>Comment from HR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>