force-app/main/default/objects/clofor_com_cfs__Interview__c/fields/clofor_com_cfs__Interviewer02__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Interviewer02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer (02)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview2</relationshipName>
    <type>Lookup</type>
</CustomField>