force-app/main/default/objects/clofor_com_cfs__Interview__c/fields/clofor_com_cfs__Interviewer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview</relationshipName>
    <type>Lookup</type>
</CustomField>