force-app/main/default/objects/clofor_com_cfs__Interview__c/fields/clofor_com_cfs__Interviewschedule__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Interviewschedule__c</fullName>
    <label>Interview schedule</label>
    <type>DateTime</type>
</CustomField>