force-app/main/default/objects/clofor_com_cfs__Interview__c/fields/clofor_com_cfs__Jobopening__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Jobopening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>clofor_com_cfs__Job_Opening__c</referenceTo>
    <relationshipLabel>Interview</relationshipLabel>
    <relationshipName>Interview</relationshipName>
    <type>Lookup</type>
</CustomField>