force-app/main/default/objects/clofor_com_cfs__Interview__c/fields/clofor_com_cfs__PreviousInterview__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousInterview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Interview</label>
    <referenceTo>clofor_com_cfs__Interview__c</referenceTo>
    <relationshipLabel>Interview</relationshipLabel>
    <relationshipName>Next_Interview</relationshipName>
    <type>Lookup</type>
</CustomField>