force-app/main/default/objects/clofor_com_cfs__Interview__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Recruitment_CRM__c</columns>
    <columns>clofor_com_cfs__Approver__c</columns>
    <columns>clofor_com_cfs__Interviewschedule__c</columns>
    <columns>clofor_com_cfs__Interviewer__c</columns>
    <columns>clofor_com_cfs__Jobopening__c</columns>
    <columns>clofor_com_cfs__PreviousInterview__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__Comment_from_HR__c</columns>
    <columns>clofor_com_cfs__Comment_from_Interviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>